--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <!-- Pills navs -->
           
             <div class="card text-center">
-              <div class="card-header">Welcome to FlashyApp</div>
+              <div class="card-header">Welcome to ChatHeap</div>
                <div class="card-body">
               <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
                 <li class="nav-item" role="presentation">
