--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   sendlink.addEventListener('click', function() {
     var email = document.getElementById("client").value;
     var sender_name = document.getElementById("hostname").value;
-    location.href = "https://chatheap.000webhostapp.com/chatroom.html?email="+email+"&name="+sender_name;
+    location.href = "https://garyroberts.github.io/chatapp2021/chatroom.html?email="+email+"&name="+sender_name;
     //window.open("https://chatheap.000webhostapp.com/chatroom.html?email="+email+"&name="+sender_name,"_self");
     //location.replace("https://chatheap.000webhostapp.com/chatroom.html?email="+email+",name="+sender_name);
   });
