--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="form-outline mb-4">
-                      <input type="text" id="chatroomId" class="form-control" />
+                      <input type="text" id="chatroomId" name="chatroomId" class="form-control" />
                       <label class="form-label" for="chatroomId">Paste chatroom Id</label>
                     </div>
 
