--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   join.addEventListener('click', function() {
     var id= document.getElementById("chatroomId").value;
     var client_name = document.getElementById("clientname").value;
-    location.href = "https://garyroberts.github.io/chatapp2021/join.html?id="+id+"&name="+client_name;
+    location.href = "https://chatheap.000webhostapp.com/join.html?id="+id+"&name="+client_name;
 
   });
    
