--- a/join.html
+++ b/join.html
@@ -150,14 +150,14 @@
               <table class="display">
                 <tr>
                     <td>
-                        <span style="font-weight: bold">ID: </span>
-                        <input type="text" id="receiver-id" title="Input the ID from receive.html">
+                        <!-- <span style="font-weight: bold">ID: </span> -->
+                        <!--<input type="text" id="receiver-id" title="Input the ID from receive.html">-->
                         <button id="connect-button">Connect</button>
                     </td>
                     <td class="title">Status:</td>
                     <td><div id="status" class="status"></div></td>
                   
-                    <td class="title"> <button type="button" id="clearMsgsButton">Copy and send</button> <td class="title"></td>
+                    <!--<td class="title"> <button type="button" id="clearMsgsButton">Copy and send</button> <td class="title"></td>-->
                   </tr>
               </table>
            
@@ -202,13 +202,14 @@
 
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.2.0/dist/peerjs.min.js"></script>
 <script type="text/javascript">
+
  (function () {
 
 var lastPeerId = null;
 var peer = null; // own peer object
 var conn = null;
 var mainChat=document.getElementById("main-chat");
-var recvIdInput = document.getElementById("receiver-id");
+//var recvIdInput = document.getElementById("receiver-id");
 var status = document.getElementById("status");
 var message = document.getElementById("message");
 // var goButton = document.getElementById("goButton");
@@ -217,9 +218,11 @@ var message = document.getElementById("message");
 // var offButton = document.getElementById("offButton");
 var sendMessageBox = document.getElementById("sendMessageBox");
 var sendButton = document.getElementById("sendButton");
-var clearMsgsButton = document.getElementById("clearMsgsButton");
+//var clearMsgsButton = document.getElementById("clearMsgsButton");
 var connectButton = document.getElementById("connect-button");
 var cueString = "<span class=\"cueMsg\">Cue: </span>";
+
+
 
 /**
  * Create the Peer object for our end of the connection.
@@ -283,14 +286,21 @@ function join() {
         conn.close();
     }
 
+        var url_string = window.location.href; // www.test.com?filename=test
+        var url = new URL(url_string);
+        var roomId = url.searchParams.get("id");
+        var name = url.searchParams.get("name");
+
     // Create connection to destination peer specified in the input field
-    conn = peer.connect(recvIdInput.value, {
+    conn = peer.connect(roomId, {
         reliable: true
     });
 
     conn.on('open', function () {
-        status.innerHTML = "Connected to: " + conn.peer;
-        console.log("Connected to: " + conn.peer);
+        //status.innerHTML = "Connected to: " + conn.peer;
+        status.innerHTML = "Connected to room";
+        //console.log("Connected to: " + conn.peer);
+
 
         // Check URL params for comamnds that should be sent immediately
         var command = getUrlParam("command");
@@ -418,7 +428,7 @@ sendButton.addEventListener('click', function () {
 });
 
 // Clear messages box
-clearMsgsButton.addEventListener('click', clearMessages);
+//clearMsgsButton.addEventListener('click', clearMessages);
 // Start peer connection on click
 connectButton.addEventListener('click', join);
 
